# School21-CPP_modules

./: .gitignore
day00/ex00/: CMakeLists.txt  Makefile  megaphone.cpp
day00/ex01/: CMakeLists.txt  Makefile  main.cpp  phonebook.cpp
day00/ex02/: CMakeLists.txt
day01/ex00/: CMakeLists.txt  Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp
day01/ex01/: CMakeLists.txt  Makefile  Zombie.cpp  Zombie.hpp  ZombieHorde.cpp  main.cpp
day01/ex02/: CMakeLists.txt  Makefile  main.cpp
day01/ex03/: CMakeLists.txt  HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
day01/ex04/: CMakeLists.txt  Makefile  file  main.cpp
day01/ex05/: CMakeLists.txt  Karen.cpp  Karen.hpp  Makefile  main.cpp
day01/ex06/: CMakeLists.txt  Karen.cpp  Karen.hpp  Makefile  main.cpp
day02/-ex01/: Makefile  phonebook  phonebook.hpp  user.cpp  user.hpp
day02/-ex02/: Account.cpp
day02/ex00/: Fixed.hpp  Makefile  main.cpp
day02/ex01/: Fixed.cpp  Fixed.hpp  main.cpp
day02/ex02/: CMakeLists.txt  Fixed.cpp  Fixed.hpp  fixed  main.cpp
day03/ex00/: ClapTrap.hpp  Makefile  main.cpp
day03/ex01/: CMakeLists.txt  Makefile  ScavTrap.cpp  main.cpp
day03/ex02/: CMakeLists.txt  FragTrap.hpp  Makefile  ScavTrap.hpp  main.cpp
day03/ex03/: CMakeLists.txt  ClapTrap.cpp  ClapTrap.hpp  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
day04/ex00/: Animal.cpp  Cat.cpp  Cat.hpp  Dog.cpp  (+4 more)
day06/ex02/: Base.cpp  Base.hpp  CMakeLists.txt  Identify.cpp  Identify.hpp  Makefile
(+97 files in other folders)
